# backend

./: .env.example  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: run-tests.yml
app/: config.py  deps.py  models.py  server.py
app/address/: controller.py  deps.py  repository.py  route.py  schema.py
app/base/: controller.py
app/chapter_content/: controller.py  deps.py  repository.py  route.py  schema.py
app/chat/: controller.py  deps.py  route.py
app/common/address/: controller.py  deps.py  exception.py  repository.py  route.py  schema.py
app/common/base/: controller.py  repository.py
app/common/session/: controller.py  deps.py  route.py  schema.py
app/common/user/: content_status.py  controller.py  deps.py  exception.py  (+3 more)
app/controllers/: address.py  base.py  chapter_content.py  chat.py  course.py  course_category.py  post.py  session.py  user.py
app/course/: controller.py  deps.py  repository.py  route.py
app/course_category/: controller.py  deps.py  repository.py  route.py
app/exceptions/: chapter_content.py  user.py
app/models/: user.py
app/post/: controller.py  deps.py  repository.py  route.py  schema.py
app/post_category/: controller.py  deps.py  repository.py  route.py
app/repositories/: address.py  base.py  chapter_content.py  course.py  post.py  user.py
app/routes/: address.py  chapter_contents.py  chat.py  course_categories.py  courses.py  post_categories.py  posts.py  sessions.py  users.py
app/schemas/: address.py  chapter_content.py  chat.py  course.py  course_category.py  post.py  post_category.py  sessions.py  users.py
app/service/: auth.py  openai_client.py  prompts.py  stripe_client.py
app/services/: auth.py  bucket_manager.py  openai_client.py  prompts.py
app/session/: controller.py  route.py  schema.py
app/user/: controller.py  deps.py  exception.py  repository.py  route.py
app/users/: content_status.py  controller.py  route.py
migrations/: env.py
migrations/versions/: 0a438af81b03_create_tables_for_initial_oms.py  0cf73448e24c_change_course_image_url_to_image_key.py  1a59dda5b59b_add_cascate.py  1c7168d6b438_add_stripe_product_id.py  297b8a0f491b_create_tables_for_initial_oms.py  32f06c6691ea_add_teacher_at_column_on_users_table.py  46f6e0c41de7_create_initial_tables.py  4aaf931930f7_creating_column_published_at_in_course_.py  4b12947b3404_add_image_url_to_courses_table.py  a7332cc0a72f_fix_address_migration.py  aa7524b7039a_create_base_table.py  aba2aaef5bf2_post_can_be_unique.py  b2509164e7e6_add_stripe_price_id.py  c71808eede32_add_posts_available_quantity.py  cf515e5ce864_creating_relation_between_course_and_.py  f5e46b64710f_changing_column_number_type_in_table_.py  f7386aa90124_creating_address_table.py
scripts/: check_heads.py  db_seed.py
tests/: conftest.py  factories.py  mocks.py
tests/address/: test_address_controller.py  test_address_repository.py
tests/alembic/: test_migrations.py
tests/chapter_content/: test_chapter_content_controller.py
tests/controllers/: test_course_category_controller.py  test_course_controller.py  test_session_controller.py  test_user_controller.py
tests/course/: test_course_controller.py  test_course_repository.py
tests/course_category/: test_course_category_controller.py
tests/course_chapter/: test_course_chapter_controller.py  test_course_chapter_repository.py
tests/course_chapter_content/: test_course_chapter_content_controller.py  test_course_chapter_controller.py
tests/fixture/: conftest.py
tests/oms/: test_order_controller.py
tests/post/: test_post_controller.py
tests/session/: test_session_controller.py
tests/user/: test_user_controller.py  test_user_repository.py
(+51 files in other folders)
